fix letter-spacing

--- a/docs/src/pages/index.module.scss
+++ b/docs/src/pages/index.module.scss
@@ -229,7 +229,7 @@
     @media (max-width: 996px) {
       font-size: 16px;
       line-height: 24px;
-      letter-spacing: -2%;
+      letter-spacing: -0.32px;
     }
   }
 
@@ -592,7 +592,7 @@
     height: 48px;
     font-size: 11px;
     line-height: 12.59px;
-    letter-spacing: -1%;
+    letter-spacing: -0.11px;
   }
 
   display: flex;
